<resources>
    <string name="app_name">AppForSimbCourse</string>
    <string name="login">E-mail</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="forgotten_passw">Забыли пароль?</string>
    <string name="use_social_network">Использовать соцсети</string>
    <string name="not_all_fields">Не все поля заполнены</string>
    <string name="back">Назад</string>
    <string name="auth">Авторизация</string>
    <string name="sign_in">Войти</string>
    <string name="exit">Выход</string>
    <string name="hide_contact_data">Скрыть контактные данные</string>
    <string name="edit">Редактировать</string>
    <string name="change_photo">Сменить фотографию</string>
    <string name="change_password">Изменить пароль</string>
    <string name="save">Сохранить</string>
    <string name="personal_data">Личные данные</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="email">E-mail</string>

    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>


</resources>
