<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmitry.appforsimbcourse.view.MainActivity"
    android:background="#000">


    <ImageView
        android:id="@+id/actMainLogo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_logo"
        android:background="@drawable/img"

        />

    <RelativeLayout
        android:id="@+id/actMainFormSignIn"
       android:layout_marginTop="@dimen/margin_top_form"
        android:layout_height="@dimen/form_sign_in_height"
        android:layout_width="@dimen/form_sign_in_width"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF">
        
        <EditText
            android:id="@+id/actMainLogin"
            android:layout_width="@dimen/width_login_password"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:textSize="@dimen/font_size_login"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/margin_top_login"
            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/actMainPassw"
            android:layout_width="@dimen/width_login_password"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actMainLogin"
            android:hint="@string/password"
            android:textSize="@dimen/font_size_password"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/margin_top_password"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            />
        <LinearLayout
            android:id="@+id/actMainSignUpForgotten"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_sing_in_forgotten"
            android:layout_below="@+id/actMainPassw"
            android:layout_marginTop="@dimen/margin_top_sing_up_forgotten"
            android:orientation="horizontal">

            <Button
                android:id="@+id/actMainBtnSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/font_size_sign_up_forgotten"
                android:textStyle="normal"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:gravity="center"
               />
            <Button
                android:id="@+id/actMainBtnForgotten"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:text="@string/forgotten_passw"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/font_size_sign_up_forgotten"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:gravity="center"
                />
        </LinearLayout>
        <Button
            android:id="@+id/actMainBtnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_sign_in"
            android:layout_below="@+id/actMainSignUpForgotten"
            android:layout_margin="@dimen/margin_btn_sign_in"
            android:background="@color/colorGrey"
            android:text="@string/not_all_fields"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textAllCaps="false"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_use_social_net"
        android:layout_marginTop="@dimen/margin_top_use_social_net"
        android:layout_below="@+id/actMainFormSignIn"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_use_social_net"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:gravity="center"
        tools:text="@string/use_social_network"/>

</RelativeLayout>
