<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.example.dmitry.appforsimbcourse.view.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/actPersonalDataAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_of_image_profile"
                android:background="@drawable/default_photo"

                android:scaleType="fitXY"

                app:riv_mutate_background="true"
                app:riv_oval="true"
                app:riv_tile_mode="repeat" />

            <TextView
                android:id="@+id/actPersonalDataFI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_fio_field"
                android:text="Михаил Дерябин"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_fio" />

            <TextView
                android:id="@+id/actPersonalDataChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_bottom_change_photo"
                android:background="@color/colorWhite"
                android:text="@string/change_photo"
                android:textAllCaps="false"
                android:textColor="@color/colorGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_label_personal_data"
                android:gravity="start"
                android:text="@string/personal_data"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_label_personal_data"
                android:layout_marginTop="@dimen/margin_top_before_info"
                android:text="@string/name"
                android:textColor="@color/colorGray" />

            <EditText
                android:id="@+id/actPersonalDataName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_label_personal_data"
                android:layout_marginStart="@dimen/margin_start_label_personal_data" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_label_personal_data"
                android:layout_marginTop="@dimen/margin_top_between_field"
                android:text="@string/phone"
                android:textColor="@color/colorGray" />

            <EditText
                android:id="@+id/actPersonalDataPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_label_personal_data"
                android:layout_marginStart="@dimen/margin_start_label_personal_data" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_label_personal_data"
                android:layout_marginTop="@dimen/margin_top_between_field"
                android:text="@string/email"
                android:textColor="@color/colorGray" />

            <EditText
                android:id="@+id/actPersonalDataEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_label_personal_data"
                android:layout_marginStart="@dimen/margin_start_label_personal_data" />

            <Button
                android:id="@+id/actPersonalDataBtnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_btn_save"
                android:layout_marginBottom="@dimen/margin_bottom_btn_sign_in"
                android:layout_marginEnd="@dimen/margin_start_label_personal_data"
                android:layout_marginStart="@dimen/margin_end_label_personal_data"
                android:layout_marginTop="@dimen/margin_top_between_field"
                android:background="@color/colorGray"
                android:fontFamily="sans-serif-medium"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
